tests/valid/test_record_14.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer[] xs, Buffer[] ys):
     if:
        xs == ys[0:=xs[0]{wp:=0}]
     then:
        xs[0].wp == 0
