tests/invalid/test_041.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer[] xs, Buffer[] ys):
     if:
        xs == ys[0:=xs[0]{wp:=0}]
     then:
        x[1].wp == 0
